--- a/styles/index.css
+++ b/styles/index.css
@@ -89,7 +89,7 @@ main {
 	border: none;
 	background-color: transparent;
 	color: var(--secondary-color);
-
+	cursor: pointer;
 	text-decoration: underline;
 	font-size: 0.725rem;
 }
@@ -237,4 +237,8 @@ article {
 	text-align: center;
 	text-decoration: none;
 	font-weight: bold;
+}
+
+.pages {
+	margin-top: 1rem;
 }
